Use KIO::DesktopExecParser for reading Exec value
This way we do not have to deal with the placeholders for URLs
and quotes for the path, which might become problematic later on.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,11 +6,11 @@ set(CMAKE_MODULE_PATH ${ECM_MODULE_PATH} ${CMAKE_MODULE_PATH})
 include(KDEInstallDirs)
 include(KDECMakeSettings)
 include(KDECompilerSettings NO_POLICY_SCOPE)
-find_package(KF5 REQUIRED COMPONENTS Config)
+find_package(KF5 REQUIRED COMPONENTS Config KIO)
 
 set(jetbrains_api_SRCS JetbrainsApplication.cpp SettingsDirectory.cpp Project.cpp export.cpp tests/XMLParserTest.cpp)
 add_library(jetbrains_api_static STATIC ${jetbrains_api_SRCS})
-target_link_libraries(jetbrains_api_static KF5::ConfigCore Qt5::Xml)
+target_link_libraries(jetbrains_api_static KF5::ConfigCore Qt5::Xml KF5::KIOCore)
 
 add_subdirectory(tests)
 
