Refactor Project class to struct
This is just a really simple container

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ include(KDECMakeSettings)
 include(KDECompilerSettings NO_POLICY_SCOPE)
 find_package(KF5 REQUIRED COMPONENTS Config)
 
-set(jetbrains_api_SRCS JetbrainsApplication.cpp SettingsDirectory.cpp Project.cpp export.cpp tests/XMLParserTest.cpp)
+set(jetbrains_api_SRCS JetbrainsApplication.cpp SettingsDirectory.cpp export.cpp tests/XMLParserTest.cpp)
 add_library(jetbrains_api_static STATIC ${jetbrains_api_SRCS})
 target_link_libraries(jetbrains_api_static KF5::ConfigCore Qt5::Xml)
 
