Make project work with Qt5 and Qt6

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,20 @@
 cmake_minimum_required(VERSION 3.16)
+project(jetbrains-api)
 
-find_package(ECM ${KF5_MIN_VERSION} REQUIRED NO_MODULE)
+set(KF_MIN_VERSION 5.82)
+
+find_package(ECM ${KF_MIN_VERSION} REQUIRED NO_MODULE)
 set(CMAKE_MODULE_PATH ${ECM_MODULE_PATH} ${CMAKE_MODULE_PATH})
 include(KDEInstallDirs)
 include(KDECMakeSettings)
 include(KDECompilerSettings NO_POLICY_SCOPE)
-find_package(KF5 REQUIRED COMPONENTS Config)
+
+find_package(KF${QT_MAJOR_VERSION} REQUIRED COMPONENTS Config Service I18n)
+find_package(Qt${QT_MAJOR_VERSION} REQUIRED COMPONENTS Xml)
 
 set(jetbrains_api_SRCS JetbrainsApplication.cpp SettingsDirectory.cpp export.cpp tests/XMLParserTest.cpp)
 add_library(jetbrains_api_static STATIC ${jetbrains_api_SRCS})
-target_link_libraries(jetbrains_api_static KF5::ConfigCore Qt5::Xml)
+target_link_libraries(jetbrains_api_static Qt::Xml KF${QT_MAJOR_VERSION}::ConfigCore KF${QT_MAJOR_VERSION}::Service)
 
 include(ECMQtDeclareLoggingCategory)
 ecm_qt_declare_logging_category(jetbrains_api_static
@@ -26,6 +31,3 @@ ecm_qt_install_logging_categories(
 )
 
 add_subdirectory(tests)
-
-find_package(KF5 REQUIRED COMPONENTS Config Service)
-target_link_libraries(jetbrains_api_static KF5::ConfigCore KF5::Service)
