--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,7 +1,7 @@
 include(ECMAddTests)
-find_package(Qt5 REQUIRED CONFIG REQUIRED Test)
+find_package(Qt${QT_MAJOR_VERSION} REQUIRED CONFIG REQUIRED Test)
 ecm_add_tests(
         XMLParserTest.cpp
         NameFormattingTest.cpp
-        LINK_LIBRARIES Qt5::Core Qt5::Test jetbrains_api_static
+        LINK_LIBRARIES Qt::Core Qt::Test jetbrains_api_static
 )
